@startuml

title __MODEL's Class Diagram__\n

  namespace model {
    class model.World {
        - frame : JFrame
        + World()
        + evolve()
        + isFinished()
        + isStart()
    }
  }
  

  namespace model {
    class model.WorldController {
        - commandBuffer : List<Cmd>
        - instruction : boolean
        - pause : boolean
        - start : boolean
        + WorldController()
        + clearCommands()
        + getCommands()
        + getDirection()
        + isInstruction()
        + isPause()
        + isStart()
        + keyPressed()
        + keyReleased()
        + keyTyped()
        + mouseClicked()
        + mouseEntered()
        + mouseExited()
        + mousePressed()
        + mouseReleased()
        + setInstruction()
        + setPause()
        + setStart()
    }
  }
  

  namespace model {
    class model.WorldPainter {
        {static} # HEIGHT : int
        {static} # WIDTH : int
        - drawables : List<Drawable>
        + WorldPainter()
        + draw()
        + getCamera()
        + getHeight()
        + getWidth()
        + setFrame()
        + submit()
    }
  }
  

  model.World .up.|> engine.Game
  model.World o-- game.level.CollisionResolver : collisionResolver
  model.World o-- model.WorldController : controller
  model.World o-- game.level.Maze : maze
  model.World o-- model.WorldPainter : renderWindow
  model.WorldController .up.|> engine.GameController
  model.WorldPainter .up.|> engine.GamePainter
  model.WorldPainter o-- game.level.Camera : camera


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
